crates/ruff_linter/src/rules/refurb/snapshots/ruff_linter__rules__refurb__tests__math-constant_FURB152.py.snap
---
source: crates/ruff_linter/src/rules/refurb/mod.rs
---
FURB152 [*] Replace `3.14` with `math.pi`
 --> FURB152.py:3:5
  |
1 | r = 3.1  # OK
2 |
3 | A = 3.14 * r ** 2  # FURB152
  |     ^^^^
4 |
5 | C = 6.28 * r  # FURB152
  |
help: Use `math.pi`
  |
1 + import math
2 | r = 3.1  # OK
3 |
  - A = 3.14 * r ** 2  # FURB152
4 + A = math.pi * r ** 2  # FURB152
5 |
  |
note: This is an unsafe fix and may change runtime behavior

FURB152 [*] Replace `6.28` with `math.tau`
 --> FURB152.py:5:5
  |
3 | A = 3.14 * r ** 2  # FURB152
4 |
5 | C = 6.28 * r  # FURB152
  |     ^^^^
6 |
7 | e = 2.71  # FURB152
  |
help: Use `math.tau`
  |
1 + import math
2 | r = 3.1  # OK
3 |
4 | A = 3.14 * r ** 2  # FURB152
5 |
  - C = 6.28 * r  # FURB152
6 + C = math.tau * r  # FURB152
7 |
  |
note: This is an unsafe fix and may change runtime behavior

FURB152 [*] Replace `2.71` with `math.e`
 --> FURB152.py:7:5
  |
5 | C = 6.28 * r  # FURB152
6 |
7 | e = 2.71  # FURB152
  |     ^^^^
8 |
9 | r = 3.15  # OK
  |
help: Use `math.e`
  |
1 + import math
2 | r = 3.1  # OK
--------------------------------------------------------------------------------
7 |
  - e = 2.71  # FURB152
8 + e = math.e  # FURB152
9 |
  |
note: This is an unsafe fix and may change runtime behavior

FURB152 [*] Replace `3.141` with `math.pi`
  --> FURB152.py:11:5
   |
 9 | r = 3.15  # OK
10 |
11 | r = 3.141  # FURB152
   |     ^^^^^
12 |
13 | r = 3.142  # FURB152
   |
help: Use `math.pi`
   |
1  + import math
2  | r = 3.1  # OK
--------------------------------------------------------------------------------
11 |
   - r = 3.141  # FURB152
12 + r = math.pi  # FURB152
13 |
   |
note: This is an unsafe fix and may change runtime behavior

FURB152 [*] Replace `3.142` with `math.pi`
  --> FURB152.py:13:5
   |
11 | r = 3.141  # FURB152
12 |
13 | r = 3.142  # FURB152
   |     ^^^^^
14 |
15 | r = 3.1415  # FURB152
   |
help: Use `math.pi`
   |
1  + import math
2  | r = 3.1  # OK
--------------------------------------------------------------------------------
13 |
   - r = 3.142  # FURB152
14 + r = math.pi  # FURB152
15 |
   |
note: This is an unsafe fix and may change runtime behavior

FURB152 [*] Replace `3.1415` with `math.pi`
  --> FURB152.py:15:5
   |
13 | r = 3.142  # FURB152
14 |
15 | r = 3.1415  # FURB152
   |     ^^^^^^
16 |
17 | r = 3.1416  # FURB152
   |
help: Use `math.pi`
   |
1  + import math
2  | r = 3.1  # OK
--------------------------------------------------------------------------------
15 |
   - r = 3.1415  # FURB152
16 + r = math.pi  # FURB152
17 |
   |
note: This is an unsafe fix and may change runtime behavior

FURB152 [*] Replace `3.1416` with `math.pi`
  --> FURB152.py:17:5
   |
15 | r = 3.1415  # FURB152
16 |
17 | r = 3.1416  # FURB152
   |     ^^^^^^
18 |
19 | r = 3.141592  # FURB152
   |
help: Use `math.pi`
   |
1  + import math
2  | r = 3.1  # OK
--------------------------------------------------------------------------------
17 |
   - r = 3.1416  # FURB152
18 + r = math.pi  # FURB152
19 |
   |
note: This is an unsafe fix and may change runtime behavior

FURB152 [*] Replace `3.141592` with `math.pi`
  --> FURB152.py:19:5
   |
17 | r = 3.1416  # FURB152
18 |
19 | r = 3.141592  # FURB152
   |     ^^^^^^^^
20 |
21 | r = 3.141593  # FURB152
   |
help: Use `math.pi`
   |
1  + import math
2  | r = 3.1  # OK
--------------------------------------------------------------------------------
19 |
   - r = 3.141592  # FURB152
20 + r = math.pi  # FURB152
21 |
   |
note: This is an unsafe fix and may change runtime behavior

FURB152 [*] Replace `3.141593` with `math.pi`
  --> FURB152.py:21:5
   |
19 | r = 3.141592  # FURB152
20 |
21 | r = 3.141593  # FURB152
   |     ^^^^^^^^
22 |
23 | r = 3.14159265  # FURB152
   |
help: Use `math.pi`
   |
1  + import math
2  | r = 3.1  # OK
--------------------------------------------------------------------------------
21 |
   - r = 3.141593  # FURB152
22 + r = math.pi  # FURB152
23 |
   |
note: This is an unsafe fix and may change runtime behavior

FURB152 [*] Replace `3.14159265` with `math.pi`
  --> FURB152.py:23:5
   |
21 | r = 3.141593  # FURB152
22 |
23 | r = 3.14159265  # FURB152
   |     ^^^^^^^^^^
24 |
25 | r = 3.141592653589793238462643383279  # FURB152
   |
help: Use `math.pi`
   |
1  + import math
2  | r = 3.1  # OK
--------------------------------------------------------------------------------
23 |
   - r = 3.14159265  # FURB152
24 + r = math.pi  # FURB152
25 |
   |
note: This is an unsafe fix and may change runtime behavior

FURB152 [*] Replace `3.141592653589793238462643383279` with `math.pi`
  --> FURB152.py:25:5
   |
23 | r = 3.14159265  # FURB152
24 |
25 | r = 3.141592653589793238462643383279  # FURB152
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
26 |
27 | r = 3.14159266  # OK
   |
help: Use `math.pi`
   |
1  + import math
2  | r = 3.1  # OK
--------------------------------------------------------------------------------
25 |
   - r = 3.141592653589793238462643383279  # FURB152
26 + r = math.pi  # FURB152
27 |
   |
note: This is an unsafe fix and may change runtime behavior

FURB152 [*] Replace `2.718` with `math.e`
  --> FURB152.py:31:5
   |
29 | e = 2.7 # OK
30 |
31 | e = 2.718  # FURB152
   |     ^^^^^
32 |
33 | e = 2.7182  # FURB152
   |
help: Use `math.e`
   |
1  + import math
2  | r = 3.1  # OK
--------------------------------------------------------------------------------
31 |
   - e = 2.718  # FURB152
32 + e = math.e  # FURB152
33 |
   |
note: This is an unsafe fix and may change runtime behavior

FURB152 [*] Replace `2.7182` with `math.e`
  --> FURB152.py:33:5
   |
31 | e = 2.718  # FURB152
32 |
33 | e = 2.7182  # FURB152
   |     ^^^^^^
34 |
35 | e = 2.7183  # FURB152
   |
help: Use `math.e`
   |
1  + import math
2  | r = 3.1  # OK
--------------------------------------------------------------------------------
33 |
   - e = 2.7182  # FURB152
34 + e = math.e  # FURB152
35 |
   |
note: This is an unsafe fix and may change runtime behavior

FURB152 [*] Replace `2.7183` with `math.e`
  --> FURB152.py:35:5
   |
33 | e = 2.7182  # FURB152
34 |
35 | e = 2.7183  # FURB152
   |     ^^^^^^
36 |
37 | e = 2.719  # OK
   |
help: Use `math.e`
   |
1  + import math
2  | r = 3.1  # OK
--------------------------------------------------------------------------------
35 |
   - e = 2.7183  # FURB152
36 + e = math.e  # FURB152
37 |
   |
note: This is an unsafe fix and may change runtime behavior

FURB152 [*] Replace `2.7182000000000001` with `math.e`
  --> FURB152.py:45:5
   |
43 | e = 2.718200000000001  # OK
44 |
45 | e = 2.7182000000000001  # FURB152
   |     ^^^^^^^^^^^^^^^^^^
help: Use `math.e`
   |
1  + import math
2  | r = 3.1  # OK
--------------------------------------------------------------------------------
45 |
   - e = 2.7182000000000001  # FURB152
46 + e = math.e  # FURB152
   |
note: This is an unsafe fix and may change runtime behavior
